--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
   <!-- Enable bootstrap 4 theme -->
   <script>window.__theme = 'bs4';</script>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 
   <!-- App Loading... -->
 </body>
